@@ -1360,7 +1360,7 @@ public class StatefulShardsAvailabilityHealthIndicatorServiceTests extends ESTes
                             unassignedTimeWithinGracePeriod.millis(),
                             false,
                             UnassignedInfo.AllocationStatus.NO_ATTEMPT,
-                            Collections.emptySet(),
+                            failedAllocations > 0 ? Set.of(randomNodeId()) : Collections.emptySet(),
                             null
                         )
                     )
@@ -1417,8 +1417,6 @@ public class StatefulShardsAvailabilityHealthIndicatorServiceTests extends ESTes
         }
     }
 
-    /// Documents current behavior for master directly cancelled recoveries ({@link UnassignedInfo.Reason#RECOVERY_CANCELLED}).
-    /// Direct cancellation is still disabled by default.
     public void testRecoveryCancelledReplicaGracePeriodBehavior() {
         final var projectId = randomProjectIdOrDefault();
         final var indexName = randomIndexName();
@@ -1445,7 +1443,7 @@ public class StatefulShardsAvailabilityHealthIndicatorServiceTests extends ESTes
                             unassignedTimeWithinGracePeriod.millis(),
                             false,
                             UnassignedInfo.AllocationStatus.NO_ATTEMPT,
-                            Collections.emptySet(),
+                            failedAllocations > 0 ? Set.of(randomNodeId()) : Collections.emptySet(),
                             null
                         )
                     )
